monorepo_internal/kube/keycloack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: keycloak
  namespace: oasa-telemat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start
        image: quay.io/keycloak/keycloak:24.0.0
        imagePullPolicy: IfNotPresent
        name: keycloak
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: management
          containerPort: 9000
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
